<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_no_audio_tracks">No Audio Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_text_tracks">No Text Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_tracks_available">No tracks available</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_no_info_available">No info available</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="Accredited_by">Accredited by the joint commission</string>
    <string name="_13_50">$13.50</string>
    <string name="_360_package">360 Package</string>
    <string name="about">About</string>
    <string name="accepting">Accepting</string>
    <string name="accepting_new_patients">Accepting new patients:</string>
    <string name="accepts_new_patients">Accepts new patients</string>
    <string name="ada_accessible">ADA Accessible</string>
    <string name="ada_accessible_">ADA Accessible:</string>
    <string name="add_member">Add Member</string>
    <string name="add_members">Add Members</string>
    <string name="add_new_member">Add New Member</string>
    <string name="add_upto">You can add up to 3 additional members from your household.</string>
    <string name="added_fav">Added as favourite</string>
    <string name="additional_10_month">Additional $10 / Month</string>
    <string name="additional_info">For additional information, please visit: www.VURVhealth.com.</string>
    <string name="address_details">Address Details:</string>
    <string name="address_line_1">Address 1</string>
    <string name="address_line_2">Address 2</string>
    <string name="adress">Address:</string>
    <string name="all_plans_hav">All plans have a 30 day money back guarantee. You can cancel or upgrade at any time!</string>
    <string name="alt_caps">ALTERNATIVE HEALTH</string>
    <string name="alt_health">Alt Health</string>
    <string name="alt_plan">Alternative Health Plan Not Included</string>
    <string name="alt_vurv_txt">&lt;b>Patient:&lt;/b> Use the Search tool to locate a participating ChooseHealthy® provider. Present this card to a participating ChooseHealthy® provider for immediate savings off regular fees to a wide variety of credentialed specialty health care providers.</string>
    <string name="alt_vurv_txt1">For assistance, call the following number:
        &lt;br /&gt; &lt;b>(800) 290-0523&lt;/b> </string>
    <string name="ammount">Total</string>
    <string name="annual_membership">Annual Membership</string>
    <string name="annual_subscription">Pulse Single Monthly Subscription</string>
    <string name="app_mgmt">App Management</string>
    <string name="app_name">VURVhealth</string>
    <string name="app_qtn1" translatable="false">How do I update my information?</string>
    <string name="app_qtn1A">Updating your information is quick and easy. Simply login to your account through your VURVhealth app or on the website, and update the information directly. Your information will instantly save and update.</string>
    <string name="app_qtn2">How do I change my password?</string>
    <string name="app_qtn2A">You can change your password directly in the profile section of the VURVhealth app or within your account on a desktop computer.</string>
    <string name="application_language">Application Language</string>
    <string name="apply">Apply</string>
    <string name="best_price">Best Prices Nearby</string>
    <string name="bill_payment">Billing &amp; Payment</string>
    <string name="billing">Billing</string>
    <string name="billing_addrs">Billing Address</string>
    <string name="billing_adrs">Update Address</string>
    <string name="billing_information">Billing Information</string>
    <string name="bin">BIN \u0020\u0020\u0020 018323</string>
    <string name="brand">Brand</string>
    <string name="cancel">Cancel</string>
    <string name="chinese">简体中文）</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="create_vurvid">Create VURVhealth ID</string>
    <string name="dob_txt">Date of Birth (MM / DD / YY)</string>
    <string name="done">Done</string>
    <string name="email_instructions">An email with instructions to reset your password has been sent to:</string>
    <string name="email_sent">Email Sent!</string>
    <string name="english">English</string>
    <string name="female">Female</string>
    <string name="get_VURVID">Before you can get a VURV ID, we need to collect some information.</string>
    <string name="includes_discnt">Includes discounts on:</string>
    <string name="male">Male</string>
    <string name="ok">OK</string>
    <string name="optional">Optional</string>
    <string name="select_language">Select Language</string>
    <string name="state">State</string>
    <string name="usa">USA</string>
    <string name="you_have_to">"You have been added to your household's Pulse subscription."</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="your_middle_name">Your Middle Name</string>
    <string name="zip_4">ZIP+4</string>
    <string name="zip_code">Zip Code</string>
    <string name="hi_sec_name">Welcome, Brain</string>
</resources>