<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="17.0dip"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:text="@string/select_language" />
    <View android:background="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:alpha="0.3" />
    <TextView android:textSize="17.0dip"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/english"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:text="@string/english" />
    <View android:background="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:alpha="0.3" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/chinese"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:text="@string/chinese" />
    <View
        android:background="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:alpha="0.3" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp">
        <Button android:textColor="@color/white"
            android:id="@+id/cancelButton"
            android:background="@drawable/gradient_button_background"
            android:layout_width="fill_parent"
            android:layout_height="42.0dip"
            android:layout_marginRight="@dimen/margin_10dp"
            android:text="@string/cancel"
            android:layout_weight="1.0"
            android:textAllCaps="true" />
        <Button android:textColor="@color/white"
            android:id="@+id/doneBtn"
            android:background="@drawable/gradient_button_background"
            android:layout_width="fill_parent"
            android:layout_height="42.0dip"
            android:text="@string/done"
            android:layout_weight="1.0"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>