<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/view_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/htab_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/view_bg"
        android:gravity="top|center"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/done"
                    android:textSize="16dp"
                    android:textColor="@color/blue"/>

                <TextView
                    android:id="@+id/tb_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/billing_adrs"
                    android:layout_weight="1"
                    android:textColor="@color/blue"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/blue"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/gradient_vurv" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_15dp"
            android:orientation="vertical">

<!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/billing_adrs"
                android:textColor="@color/blue"
                android:textSize="18dp"
                android:textStyle="bold" />
-->
            <EditText
                android:id="@+id/etAdd1"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/border_line"
                android:hint="@string/address_line_1"
                android:maxLength="100"
                android:lines="1"
                android:singleLine="true"
                android:inputType="textNoSuggestions"
                android:paddingLeft="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etAdd2"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/border_line"
                android:hint="@string/address_line_2"
                android:maxLength="100"
                android:lines="1"
                android:singleLine="true"
                android:inputType="textNoSuggestions"
                android:paddingLeft="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etCity"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/border_line"
                android:lines="1"
                android:maxLength="25"
                android:paddingLeft="10dp"
                android:inputType="textNoSuggestions"
                android:hint="@string/city"
                android:singleLine="true"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />

            <Spinner
                android:id="@+id/spState"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                style="@style/spinner_style"
                android:hint="@string/state"
                android:lines="1"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etCountry"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/border_line"
                android:hint="@string/country"
                android:lines="1"
                android:maxLength="5"
                android:singleLine="true"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:text="@string/usa"
                android:clickable="false"
                android:editable="false"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />


            <EditText
                android:id="@+id/etZipcode"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/border_line"
                android:hint="@string/zip_code"
                android:lines="1"
                android:maxLength="5"
                android:singleLine="true"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etZip4"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/border_line"
                android:hint="@string/zip_4"
                android:lines="1"
                android:maxLength="4"
                android:singleLine="true"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/hintColor" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>