<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_bg"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/htab_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/view_bg"
        android:gravity="top|center"
        android:minHeight="?attr/actionBarSize">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:src="@drawable/back_btn"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/create_vurvid"
                android:textColor="@color/blue"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/gradient_vurv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvVURVIDInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/get_VURVID"
            android:textColor="@color/black"
            android:textSize="14dp" />


        <EditText
            android:id="@+id/tvFirstName"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/blue"
            android:lines="1"
            android:maxLength="25"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/border_line"
            android:hint="@string/your_first_name"
            android:paddingLeft="10dp" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvMiddleName"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:lines="1"
                android:singleLine="true"
                android:textColorHint="@color/hintColor"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue"
                android:inputType="textNoSuggestions"
                android:background="@drawable/border_line"
                android:hint="@string/your_middle_name"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/text_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/optional"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/tvlastName"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:lines="1"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/hintColor"
            android:singleLine="true"
            android:background="@drawable/border_line"
            android:hint="@string/your_last_name"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/tvDoB"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:lines="1"
            android:textColorHint="@color/hintColor"
            android:singleLine="true"
            android:stateListAnimator="@null"
            android:background="@drawable/border_line"
            android:hint="@string/dob_txt"
            android:paddingLeft="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/chkMale"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="16dp"
                android:padding="@dimen/margin_15dp"
                android:button="@drawable/customdrawablecheckbox"/>

            <CheckBox
                android:id="@+id/chkFemale"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="16dp"
                android:padding="@dimen/margin_15dp"
                android:button="@drawable/customdrawablecheckbox"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="24dp"
            android:padding="12dp"
            android:alpha="0.48"
            android:background="@drawable/gradient_button_background"
            android:stateListAnimator="@null"
            android:textColor="@color/white"
            android:text="@string/done"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_done_active"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="24dp"
            android:background="@drawable/gradient_button_background"
            android:stateListAnimator="@null"
            android:textColor="@color/white"
            android:text="@string/done"
            android:textAllCaps="false" />


    </LinearLayout>


</LinearLayout>